--- a/.github/workflows/Test.yml
+++ b/.github/workflows/Test.yml
@@ -1,30 +1,24 @@
-name: CI
+name: Test
 
 on:
   push:
     branches: [ main ]
   pull_request:
-    branches: [ main ]
+    branches: [ * ]
 
 jobs:
   test_macos:
     runs-on: macos-11
     timeout-minutes: 30
-    
     steps:
     - uses: actions/checkout@v2
-      
-    - uses: Didstopia/SwiftAction@v1.0.3
-      with:
-        swift-action: 'make test'
+    - name: "Run Tests"
+      run: "swift test"
         
   test_linux:
     runs-on: ubuntu-latest
     timeout-minutes: 30
-    
     steps:
     - uses: actions/checkout@v2
-      
-    - uses: Didstopia/SwiftAction@v1.0.3
-      with:
-        swift-action: 'make test'
+    - name: "Run Tests"
+      run: "swift test"
