--- a/.github/workflows/Test.yml
+++ b/.github/workflows/Test.yml
@@ -11,7 +11,9 @@ jobs:
     runs-on: macos-13
     timeout-minutes: 30
     steps:
-    - uses: actions/checkout@v2
+    - uses: actions/checkout@v3
+    - name: "Select Xcode 14.3.1"
+      run: sudo xcode-select -s /Applications/Xcode_14.3.1.app
     - name: "Run Tests"
       run: "swift test"
         
@@ -19,6 +21,6 @@ jobs:
     runs-on: ubuntu-latest
     timeout-minutes: 30
     steps:
-    - uses: actions/checkout@v2
+    - uses: actions/checkout@v3
     - name: "Run Tests"
       run: "swift test"
